[gd_scene load_steps=30 format=2]

[ext_resource path="res://Assets/Assets/Puzzle2/1d.png" type="Texture" id=1]
[ext_resource path="res://Assets/Assets/Puzzle2/ejemplo mario.jpg" type="Texture" id=2]
[ext_resource path="res://Assets/Assets/hueco.png" type="Texture" id=3]
[ext_resource path="res://Escenas/Juego2/Juego2.gd" type="Script" id=4]
[ext_resource path="res://Escenas/Juego/Parte1.gd" type="Script" id=5]
[ext_resource path="res://Escenas/Juego/Parte2.gd" type="Script" id=6]
[ext_resource path="res://Assets/Assets/Puzzle2/1c.png" type="Texture" id=7]
[ext_resource path="res://Assets/Assets/Puzzle2/1i.png" type="Texture" id=8]
[ext_resource path="res://Escenas/Juego/Parte3.gd" type="Script" id=9]
[ext_resource path="res://Assets/Assets/Puzzle2/2c.png" type="Texture" id=10]
[ext_resource path="res://Escenas/Juego/Parte4.gd" type="Script" id=11]
[ext_resource path="res://Escenas/Juego/Parte5.gd" type="Script" id=12]
[ext_resource path="res://Assets/Assets/Puzzle2/2d.png" type="Texture" id=13]
[ext_resource path="res://Escenas/Juego/Parte6.gd" type="Script" id=14]
[ext_resource path="res://Assets/Assets/Puzzle2/2i.png" type="Texture" id=15]
[ext_resource path="res://Assets/Assets/Puzzle2/3c.png" type="Texture" id=16]
[ext_resource path="res://Escenas/Juego/Parte7.gd" type="Script" id=17]
[ext_resource path="res://Escenas/Juego/Parte8.gd" type="Script" id=18]
[ext_resource path="res://Assets/Assets/Puzzle2/3d.png" type="Texture" id=19]
[ext_resource path="res://Escenas/Juego/Parte9.gd" type="Script" id=20]
[ext_resource path="res://Assets/Assets/Puzzle2/3i.png" type="Texture" id=21]
[ext_resource path="res://Assets/Assets/Fuentes/Fuente1.ttf" type="DynamicFontData" id=22]
[ext_resource path="res://Escenas/Juego2/Tiempo.gd" type="Script" id=23]
[ext_resource path="res://Assets/Assets/Puzzle2/fondo_con_nubes.png" type="Texture" id=24]
[ext_resource path="res://Assets/Sonidos/Escenarios/nivel2.ogg" type="AudioStream" id=25]
[ext_resource path="res://Escenas/Sonido/SonidoColocado.tscn" type="PackedScene" id=26]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36, 34.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30, 32 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 22 )

[node name="Juego" type="Node2D"]
script = ExtResource( 4 )

[node name="Fondo" type="Sprite" parent="."]
position = Vector2( 478, 292 )
scale = Vector2( 0.28, 0.26 )
texture = ExtResource( 24 )

[node name="Tabla" type="Sprite" parent="."]
position = Vector2( 735, 358 )
scale = Vector2( 6, 6 )
texture = ExtResource( 3 )

[node name="Referencia" type="Sprite" parent="."]
position = Vector2( 247, 136 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="Parte1" type="Sprite" parent="."]
position = Vector2( 61, 350 )
texture = ExtResource( 7 )
script = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="Parte1"]
position = Vector2( -40, -34 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parte1/Area2D"]
position = Vector2( 39, 33.5 )
shape = SubResource( 1 )

[node name="SonidoColocado" parent="Parte1" instance=ExtResource( 26 )]

[node name="Parte2" type="Sprite" parent="."]
position = Vector2( 403, 541 )
texture = ExtResource( 1 )
script = ExtResource( 6 )

[node name="Area2" type="Area2D" parent="Parte2"]
position = Vector2( -40, -34 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parte2/Area2"]
position = Vector2( 39, 33.5 )
shape = SubResource( 1 )

[node name="SonidoColocado" parent="Parte2" instance=ExtResource( 26 )]

[node name="Parte3" type="Sprite" parent="."]
position = Vector2( 386, 344 )
texture = ExtResource( 8 )
script = ExtResource( 9 )

[node name="Area3" type="Area2D" parent="Parte3"]
position = Vector2( -40, -34 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parte3/Area3"]
position = Vector2( 39, 33.5 )
shape = SubResource( 1 )

[node name="SonidoColocado" parent="Parte3" instance=ExtResource( 26 )]

[node name="Parte4" type="Sprite" parent="."]
position = Vector2( 100, 503 )
texture = ExtResource( 10 )
script = ExtResource( 11 )

[node name="Area4" type="Area2D" parent="Parte4"]
position = Vector2( -40, -34 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parte4/Area4"]
position = Vector2( 39, 33.5 )
shape = SubResource( 1 )

[node name="SonidoColocado" parent="Parte4" instance=ExtResource( 26 )]

[node name="Parte5" type="Sprite" parent="."]
position = Vector2( 219, 340 )
texture = ExtResource( 13 )
script = ExtResource( 12 )

[node name="Area5" type="Area2D" parent="Parte5"]
position = Vector2( -40, -34 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parte5/Area5"]
position = Vector2( 39, 33.5 )
shape = SubResource( 1 )

[node name="SonidoColocado" parent="Parte5" instance=ExtResource( 26 )]

[node name="Parte6" type="Sprite" parent="."]
position = Vector2( 874, 68 )
texture = ExtResource( 15 )
script = ExtResource( 14 )

[node name="Area6" type="Area2D" parent="Parte6"]
position = Vector2( -40, -34 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parte6/Area6"]
position = Vector2( 39, 33.5 )
shape = SubResource( 1 )

[node name="SonidoColocado" parent="Parte6" instance=ExtResource( 26 )]

[node name="Parte7" type="Sprite" parent="."]
position = Vector2( 632, 71 )
texture = ExtResource( 16 )
script = ExtResource( 17 )

[node name="Area7" type="Area2D" parent="Parte7"]
position = Vector2( -40, -34 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parte7/Area7"]
position = Vector2( 39, 33.5 )
shape = SubResource( 1 )

[node name="SonidoColocado" parent="Parte7" instance=ExtResource( 26 )]

[node name="Parte8" type="Sprite" parent="."]
position = Vector2( 745, 67 )
texture = ExtResource( 19 )
script = ExtResource( 18 )

[node name="Area8" type="Area2D" parent="Parte8"]
position = Vector2( -40, -34 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parte8/Area8"]
position = Vector2( 39, 33.5 )
shape = SubResource( 1 )

[node name="SonidoColocado" parent="Parte8" instance=ExtResource( 26 )]

[node name="Parte9" type="Sprite" parent="."]
position = Vector2( 315, 514 )
texture = ExtResource( 21 )
script = ExtResource( 20 )

[node name="Area9" type="Area2D" parent="Parte9"]
position = Vector2( -40, -34 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parte9/Area9"]
position = Vector2( 39, 33.5 )
shape = SubResource( 1 )

[node name="SonidoColocado" parent="Parte9" instance=ExtResource( 26 )]

[node name="Posicion1" type="Position2D" parent="."]
position = Vector2( 706, 250 )

[node name="AreaPosicion1" type="Area2D" parent="Posicion1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Posicion1/AreaPosicion1"]
position = Vector2( 3, -3 )
shape = SubResource( 2 )

[node name="Posicion2" type="Position2D" parent="."]
position = Vector2( 795, 250 )

[node name="AreaPosicion2" type="Area2D" parent="Posicion2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Posicion2/AreaPosicion2"]
position = Vector2( 3, -3 )
shape = SubResource( 2 )

[node name="Posicion3" type="Position2D" parent="."]
position = Vector2( 611, 250 )

[node name="AreaPosicion3" type="Area2D" parent="Posicion3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Posicion3/AreaPosicion3"]
position = Vector2( 3, -3 )
shape = SubResource( 2 )

[node name="Posicion4" type="Position2D" parent="."]
position = Vector2( 704, 326 )

[node name="AreaPosicion4" type="Area2D" parent="Posicion4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Posicion4/AreaPosicion4"]
position = Vector2( 3, -3 )
shape = SubResource( 2 )

[node name="Posicion5" type="Position2D" parent="."]
position = Vector2( 795, 326 )

[node name="AreaPosicion5" type="Area2D" parent="Posicion5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Posicion5/AreaPosicion5"]
position = Vector2( 3, -3 )
shape = SubResource( 2 )

[node name="Posicion6" type="Position2D" parent="."]
position = Vector2( 612, 330 )

[node name="AreaPosicion6" type="Area2D" parent="Posicion6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Posicion6/AreaPosicion6"]
position = Vector2( 3, -3 )
shape = SubResource( 2 )

[node name="Posicion7" type="Position2D" parent="."]
position = Vector2( 704, 405 )

[node name="AreaPosicion7" type="Area2D" parent="Posicion7"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Posicion7/AreaPosicion7"]
position = Vector2( 3, -3 )
shape = SubResource( 2 )

[node name="Posicion8" type="Position2D" parent="."]
position = Vector2( 796, 405 )

[node name="AreaPosicion8" type="Area2D" parent="Posicion8"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Posicion8/AreaPosicion8"]
position = Vector2( 3, -3 )
shape = SubResource( 2 )

[node name="Posicion9" type="Position2D" parent="."]
position = Vector2( 612, 409 )

[node name="AreaPosicion9" type="Area2D" parent="Posicion9"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Posicion9/AreaPosicion9"]
position = Vector2( 3, -3 )
shape = SubResource( 2 )

[node name="Tiempo" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 491.0
margin_top = 6.0
margin_right = 531.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 3 )
script = ExtResource( 23 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="MusicaFondo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 25 )
volume_db = -12.381
autoplay = true

[connection signal="input_event" from="Parte1/Area2D" to="Parte1" method="_on_Area2D_input_event"]
[connection signal="input_event" from="Parte2/Area2" to="Parte2" method="_on_Area2_input_event"]
[connection signal="input_event" from="Parte3/Area3" to="Parte3" method="_on_Area3_input_event"]
[connection signal="input_event" from="Parte4/Area4" to="Parte4" method="_on_Area4_input_event"]
[connection signal="input_event" from="Parte5/Area5" to="Parte5" method="_on_Area5_input_event"]
[connection signal="input_event" from="Parte6/Area6" to="Parte6" method="_on_Area6_input_event"]
[connection signal="input_event" from="Parte7/Area7" to="Parte7" method="_on_Area7_input_event"]
[connection signal="input_event" from="Parte8/Area8" to="Parte8" method="_on_Area8_input_event"]
[connection signal="input_event" from="Parte9/Area9" to="Parte9" method="_on_Area9_input_event"]
[connection signal="area_entered" from="Posicion1/AreaPosicion1" to="Parte1" method="_on_AreaPosicion1_area_entered"]
[connection signal="area_entered" from="Posicion2/AreaPosicion2" to="Parte2" method="_on_AreaPosicion2_area_entered"]
[connection signal="area_entered" from="Posicion3/AreaPosicion3" to="Parte3" method="_on_AreaPosicion3_area_entered"]
[connection signal="area_entered" from="Posicion4/AreaPosicion4" to="Parte4" method="_on_AreaPosicion4_area_entered"]
[connection signal="area_entered" from="Posicion5/AreaPosicion5" to="Parte5" method="_on_AreaPosicion5_area_entered"]
[connection signal="area_entered" from="Posicion6/AreaPosicion6" to="Parte6" method="_on_AreaPosicion6_area_entered"]
[connection signal="area_entered" from="Posicion7/AreaPosicion7" to="Parte7" method="_on_AreaPosicion7_area_entered"]
[connection signal="area_entered" from="Posicion8/AreaPosicion8" to="Parte8" method="_on_AreaPosicion8_area_entered"]
[connection signal="area_entered" from="Posicion9/AreaPosicion9" to="Parte9" method="_on_AreaPosicion9_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
